NXP-32936: Extract OpenSearch Embed server to a Nuxeo component